// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksView Snapshots matches snapshot with error state 1`] = `
<View
  style={
    {
      "backgroundColor": "AppColors.powderGray",
      "flex": 1,
    }
  }
  testID="tasks-view-error"
>
  <Text
    style={
      {
        "color": "AppColors.errorRed",
        "fontFamily": "Ubuntu-Regular",
        "fontSize": 16,
        "fontWeight": "400",
        "padding": 32,
        "textAlign": "center",
      }
    }
    testID="tasks-view-error-text"
  >
    Failed to load tasks
  </Text>
  <Text
    style={
      {
        "color": "#747d8c",
        "fontFamily": "Ubuntu-Medium",
        "fontSize": 18,
        "fontWeight": "500",
        "textAlign": "center",
      }
    }
    testID="tasks-view-error-hint"
  >
    Pull to refresh
  </Text>
</View>
`;

exports[`TasksView Snapshots matches snapshot with loading state 1`] = `
<View
  style={
    {
      "backgroundColor": "AppColors.powderGray",
      "flex": 1,
    }
  }
  testID="tasks-view-loading"
>
  <ActivityIndicator
    color="AppColors.CIBlue"
    size="large"
    testID="tasks-view-loading-spinner"
  />
  <Text
    style={
      {
        "color": "AppColors.darkGray",
        "fontFamily": "Ubuntu-Regular",
        "fontSize": 16,
        "fontWeight": "400",
        "marginTop": 16,
        "padding": 32,
        "textAlign": "center",
      }
    }
    testID="tasks-view-loading-text"
  >
    Loading tasks...
  </Text>
</View>
`;
